# fem-shell

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MITC4Plus_IMPLEMENTATION.md  MITC4Plus_QUICK_REFERENCE.md  MITC4Plus_SUMMARY.md  Makefile  Makefile.fedora  Makefile.sdumont  Makefile.wsl  README.md  README_MITC4Plus.md  example_mitc4plus.py  pyproject.toml  results2  setup.py  validate_mitc4plus.py  validate_mitc4plus_standalone.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: fem-reviewer.agent.md
.github/instructions/: openfoam-fsi.instructions.md
.github/skills/run-fsi-simulation/: SKILL.md
.github/workflows/: makefile.yml
containers/: Dockerfile.official
docs/: cli-reference.md
examples/: blade.py  blade_blockMesh.py  blade_modal_analysis.py  blade_optimize.py  blade_plots.py  cantiveler_beam.py  cantiveler_beam_dynamic.py  cantiveler_beam_modal.py  fixed_ends_beam.py  sfeps_modal.py  shell10x_cantilever_interactive.py  simple_blade_modal.py
examples/blade/bem/: COMPARISON_RESULTS.md  README.md  compare_iea15mw.py  simulation.yaml  single_blade_forces.py
examples/blade/solid/: solid.py
examples/fsi/multiflap/: .gitignore  case_config.json  clean-tutorial.sh  generate_all.py  generate_precice_config.py  precice-config.xml  run-tutorial.sh
examples/fsi/multiflap/fluid/: clean.sh  clean_empty_results.sh  run.sh
examples/fsi/multiflap/fluid/0.orig/: U  p  phi  pointDisplacement
examples/fsi/multiflap/fluid/constant/: dynamicMeshDict
examples/fsi/multiflap/fluid/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  generate_blockMeshDict.py  generate_controlDict.py  generate_preciceDict.py  preciceDict
examples/fsi/multiflap/scripts/: generate_all.py  generate_blockMeshDict.py  generate_controlDict.py  generate_preciceDict.py  generate_precice_config.py  generate_solid_config.py
examples/fsi/multiflap/solid/: clean.sh  plot_flaps.py  run.sh  solid.py  solid_config.yaml
examples/fsi/multiflap/solid/results/: results.pvd
examples/fsi/perpendicular-beam/: clean-tutorial.sh  precice-config.xml  run-tutorial.sh
examples/fsi/perpendicular-beam/fluid/: clean.sh
examples/fsi/perpendicular-beam/fluid/constant/: dynamicMeshDict
examples/fsi/perpendicular-beam/fluid/system/: blockMeshDict  controlDict  decomposeParDict  preciceDict
examples/fsi/perpendicular-beam/solid/: clean.sh  solid.py
examples/fsi/perpendicular-box/: precice-config.xml
examples/fsi/perpendicular-box/fluid/: run.sh
examples/fsi/perpendicular-box/fluid/0.orig/: U  p  phi  pointDisplacement
examples/fsi/perpendicular-box/fluid/system/: blockMeshDict  controlDict  decomposeParDict  fvSolution
examples/fsi/perpendicular-box/solid/: precice-adapter.yaml  run.sh  solid.py
examples/fsi/perpendicular-flap/: precice-config.xml
examples/fsi/perpendicular-flap/fluid/: run.sh
examples/fsi/perpendicular-flap/fluid/system/: decomposeParDict
examples/fsi/perpendicular-flap/solid/: clean.sh  run.sh  solid.py
examples/propeller/: README_VOLUMETRIC.md  boolean_union_example.py  cylinder_example.py  test_boolean_hub_propeller.py  test_boolean_simple.py  visualize_propeller.py  volumetric_remesh_example.py
examples/reference_turbines/yamls/: IEA-15-240-RWT.yaml  IEA-15-240-RWT_VolturnUS-S.yaml
examples/solid_beam_analysis/: README.md  beam_loading_cases.py
examples/test_case/: run.sh
examples/test_case/system/: blockMeshDict
scripts/: sysFunctions
src/: __init__.py
src/fem_shell/: __init__.py
src/fem_shell/cfd_openfoam/: blockMesh.py
src/fem_shell/cfd_openfoam/test_case/: clean.sh  run.sh
src/fem_shell/cfd_openfoam/test_case/system/: controlDict
src/fem_shell/cli/: __init__.py  fsi_monitor.py  reconstruct_rotor_csv.py  run_fsi.py
src/fem_shell/constitutive/: __init__.py  failure.py
src/fem_shell/core/: __init__.py  assembler.py  bc.py  config.py  helpers.py  laminate.py  material.py  mesh.py  properties.py  viewer.py
src/fem_shell/core/mesh/: __init__.py  entities.py  generators.py  model.py  selectors.py  utils.py
src/fem_shell/core/mesh/io/: __init__.py  readers.py  writers.py
src/fem_shell/core/pyx/: cython_assembler.c  cython_assembler.pyx
src/fem_shell/elements/: MITC3.py  MITC3_composite.py  MITC4.py  MITC4_composite.py  QUAD.py  SOLID.py  __init__.py  elements.py
src/fem_shell/fsi_monitor/: __init__.py  core.py  data_provider.py
src/fem_shell/fsi_monitor/tui/: __init__.py  app.py
src/fem_shell/fsi_monitor/tui/panels/: __init__.py  forces.py  (+3 more)
src/fem_shell/models/NuMAD/: setup.py
src/fem_shell/models/blade/: aerodynamics.py  mesh.py  model.py
src/fem_shell/postprocess/: precice.py  stress_recovery.py
src/fem_shell/solvers/: __init__.py  checkpoint.py  fsi.py  fsi_rotor_legacy.py  fsi_runner.py  linear.py  modal.py  solver.py
src/fem_shell/solvers/bem/: engine.py  force_projection.py  standalone.py
src/fem_shell/solvers/fsi/: __init__.py  base.py  corotational.py  linear_dynamic.py  rotor.py  runner.py
src/fem_shell/solvers/fsi_rotor/: __init__.py  aerodynamics.py  checkpoint_state.py  config.py  generator.py  inertial_forces.py  rotor_logger.py  solver.py  transforms.py
tests/: test_bem_engine.py  test_bem_polars.py  test_benchmark.py  test_blade_mesh.py  test_force_projection.py  test_laminate.py  test_mesh.py  test_mitc3_elements.py  test_mitc4plus.py  test_mixed_solid_elements.py  test_quad_elements.py  test_rotor_inertial.py  test_solid_elements.py
tests/benchmarks/: test_ko2017_performance.py  test_mitc3_elements.py  test_mitc4plus.py  test_mitc4plus_benchmarks.py
tools/: estimate_force_cap.py  plot_openfoam.py  plot_watchpoints.py  postprocess_ccx_modal.py
(+66 files in other folders)
