[project]
name = "fem_shell"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eduardo Firvida", email = "efirvida@gmail.com" }
]
dependencies = [
    "gmsh>=4.13.1",
    "matplotlib>=3.10.1",
    "meshio>=5.3.5",
    "nevergrad>=1.0.11",
    "numpy>=2.2.4",
    "pyside6>=6.8.2.1",
    "pyvista>=0.44.2",
    "pyvistaqt>=0.11.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "shapely>=2.1.0",
    "petsc4py==3.22",
    "mpi4py==4.0.3",
    "slepc4py==3.22",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools>=61.0", "cython>=0.29", "numpy>=2.2"]
build-backend = "setuptools.build_meta"


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py38"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
  "E501", # line too long
  "B011", # 'assert False' is fine.
  "E741", # do not use variables named ‘l’, ‘O’, or ‘I’
  "C901", # fn is too complex
  "E731", # Do not assign a `lambda` expression, use a `def`
  "B904", # Within an `except` clause, raise exceptions with `raise ... from
          # err` or `raise ... from None` to distinguish them from errors in
          # exception handling

  # Might be dangerous
  "B023", # Function definition does not bind loop variable

  "ISC001", # it won't play nice with formatter
]
select = [
  "C",
  "E",
  "F",
  "W",
  "B",
  "INT",
  "ISC",    # Implicit string concat
  "G",      # f-string, %, and format in loggers is not logger-friendly.
  "RUF008",
  "W191",   # Indentation contains tabs
  "W605",   # Invalid escape sequence
  "W291",   # Trailing whitespace
  "W292",   # No newline at end of file
  "W293",   # Blank line contains whitespace
  "SIM118", # avoid 'key in dict.keys()'
  "SIM911", # use 'for k, v in dict.items()'.
  "SIM210", # use 'bool(a)' instead of 'True if a else False'
  "SIM211", # use 'not a' instead of 'False if a else True'
  "SIM401", # use 'd.get(k, default)' instead of 'd[k] if k in d else default'
  "SIM201", # use 'a != b' instead of 'not a == b'
  "SIM202", # use 'a == b' instead of 'not a != b'
  "SIM110", # https://docs.astral.sh/ruff/rules/reimplemented-builtin/
  "SIM101", # use 'isinstance(x, (T1, T2))' instead of two checks.
]

